--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,14 +1,16 @@
 .home-page {
   width: 100%;
-  height: calc(100vh - 3rem - 11rem);
+  // height: calc(100vh - 3rem - 11rem);
   display: flex;
   background-color: whitesmoke;
+  padding: 3rem 1rem;
 
   &__left {
     flex: 0.5;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   &__right {
@@ -16,5 +18,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 }
