--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,9 @@
   &__logo {
     font-size: 1.3rem;
     font-weight: 600;
+    a {
+      color: white;
+    }
   }
 
   &__nav-menu {
@@ -24,6 +27,9 @@
         margin-left: 1.5rem;
         font-size: 1.2rem;
         font-weight: 500;
+        a {
+          color: white;
+        }
       }
     }
   }
