--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,6 +1,6 @@
 .home-page {
   width: 100%;
-  // height: calc(100vh - 3rem - 11rem);
+  height: auto;
   display: flex;
   background-color: whitesmoke;
   padding: 3rem 1rem;
