--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 
   &__nav {
     padding: 1.5rem 0 1rem;
